JSAI/error/src/test/resources/base/j002.js
//Math.abs = "hello"
print("dummypass")